--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ html {
   margin-right: 0;
 }
 
-body {
-  background-color: lightgray;
+.progress {
+  position: fixed;
+  left: 0px;
+  height: 3px;
+  width: 100%;
+	z-index: 100;
 }
