--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,8 @@ html {
   margin-right: 0;
 }
 
-/* .progress {
+.progress {
   position: fixed;
   left: 0px;
-  height: 3px;
-  width: 100%;
-	z-index: 100;
-} */
+  margin: 0 0 0 0;
+}
