--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-html {
+/* html {
   margin-left: calc(100vw - 100%);
   margin-right: 0;
-}
+} */
 
 .progress {
   position: fixed;
-  left: 0px;
   margin: 0 0 0 0;
+  z-index: 1000;
 }
